--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css">
     <script src="script.js" defer></script>
+    <script src=" https://confettijs.org/confetti.min.js"></script>
     
-    <title>Web 2 Starter</title>
+    <title>Confetti</title>
 </head>
 <body>
 
-    <h1>Web 2 Starter</h1>
+    <button id="confetti">Go Confetti</button>
     
 </body>
 </html>
